changed copy and HOPEFULLY FIXED BKR works on mobile? plz

--- a/styles.css
+++ b/styles.css
@@ -21,12 +21,24 @@ font-weight: normal;
 src: local('Apercu Light Italic'), url('fonts/Apercu Light Italic.woff') format('woff');
 }
 
+body:before {
+  content: "";
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -10;
+  background: url("bkr.jpeg") no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
 
 body {
 	font-family: 'Apercu Regular';
-	background-image: url("bkr.jpeg");
-  	background-repeat: repeat; 
-  	background-attachment: fixed;
 }
 
 .header{
